--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Second Project</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi aperiam quo sint distinctio doloremque sequi architecto odio quisquam harum soluta. Adipisci mollitia maxime alias dolores officiis distinctio quod blanditiis nisi?</p>
 </body>
 </html>
